# monarchs

./: .buildinfo  .dockerignore  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  MONARCHS_model_setup.html  README.md  advanced.html  common_errors.html  dem.html  genindex.html  index.html  installation.html  making_changes.html  met_data.html  model_setup.py  model_setup_reference.html  model_setup_template.py  numba.html  objects.inv  plots.html  py-modindex.html  pyproject.toml  quickstart.html  requirements.txt  run_MONARCHS.py  running_MONARCHS.html  running_multiple_jobs.html  search.html  searchindex.js  sphinx-reading-durations.json  structure.html  usage.html
.doctrees/: MONARCHS_model_setup.doctree  advanced.doctree  common_errors.doctree  dem.doctree  environment.pickle  index.doctree  installation.doctree  making_changes.doctree  met_data.doctree  model_setup_reference.doctree  numba.doctree  plots.doctree  quickstart.doctree  running_MONARCHS.doctree  running_multiple_jobs.doctree  structure.doctree  usage.doctree
.doctrees/_templates/autoapi/: index.doctree
.doctrees/_templates/autosummary/: module.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/extract_args/: extract_args_firn.doctree  extract_args_lid.doctree  extract_firn_arrays.doctree  extract_lake_variables.doctree  extract_lid_variables.doctree  extract_met_data.doctree  extract_scalars.doctree  index.doctree  pack_args.doctree
.doctrees/autoapi/heateqn_nb/: get_k_and_kappa.doctree  heateqn.doctree  heateqn_lid.doctree  index.doctree  propagate_temperature.doctree  solve_tridiagonal.doctree
.doctrees/autoapi/loop_over_grid/: index.doctree  loop_over_grid_numba.doctree
.doctrees/autoapi/monarchs/: index.doctree
.github/workflows/: build_sphinx_docs.yml  docker_image.yml  publish_pypi.yml  python-package.yml
Docker/: Dockerfile  README.md  docker_image.sh
GMD_tests/: Lat_Flow_Comps.py
_sources/: MONARCHS_model_setup.rst.txt  advanced.rst.txt  common_errors.rst.txt  dem.rst.txt  index.rst.txt  installation.rst.txt  making_changes.rst.txt  met_data.rst.txt  model_setup_reference.rst.txt  numba.rst.txt  plots.rst.txt  quickstart.rst.txt  running_MONARCHS.rst.txt  running_multiple_jobs.rst.txt  structure.rst.txt  usage.rst.txt
_sources/autoapi/: index.rst.txt
_templates/autoapi/: index.html
_templates/autosummary/: module.html
autoapi/: index.html
autoapi/extract_args/: extract_args_firn.html  extract_args_lid.html  extract_firn_arrays.html  extract_lake_variables.html  extract_lid_variables.html  extract_met_data.html  extract_scalars.html  index.html  pack_args.html
autoapi/heateqn_nb/: get_k_and_kappa.html  heateqn.html  heateqn_lid.html  index.html  propagate_temperature.html  solve_tridiagonal.html
autoapi/loop_over_grid/: index.html  loop_over_grid_numba.html
autoapi/monarchs/: index.html
autoapi/solver_nb/: args_array.html  firn_heateqn_solver.html  index.html  lake_development_eqn.html  lake_formation_eqn.html  lake_seb_solver.html  lake_solver.html  lid_heateqn_solver.html  lid_seb_solver.html  sfc_energy_lid.html  sfc_energy_virtual_lid.html  solve_firn_heateqn.html
autoapi/surface_energy_balance/: index.html  lake_development_eqn.html  lake_formation_eqn.html  sfc_energy_lid.html  sfc_energy_virtual_lid.html
data/: get_era5_from_cds.py
docs/: README.md
docs/source/: MONARCHS_model_setup.rst  advanced.rst  common_errors.rst  conf.py  dem.rst  index.rst  installation.rst  making_changes.rst  met_data.rst  model_setup_reference.rst  quickstart.rst  running_multiple_jobs.rst  structure.rst  usage.rst
examples/: model_setup_template.py
examples/10x10_gaussian_threelake/: model_setup.py  model_setup_10x10_gaussian_threelake.py  profile_output.prof
examples/1D_test_case/: README.md  model_setup.py  model_setup_1d_testcase.py
examples/50x50_numba_parallel/: model_setup.py  model_setup_50x50_numba.py
examples/george_vi_example/: model_setup.py  model_setup_38_12_32m_mega.py  model_setup_38_12_32m_mega_subset.py
examples/planar_surface/: model_setup.py
examples/threelake_parallel_scaling_test/: model_setup.py  profile_output.prof
monarchs/DEM/: 38_12_32m_v2.0_meta.txt  Import_DEM_GaussianTestCase.py  RBIS_DEM.py  interpolation_test.py
monarchs/core/: configuration.py  driver.py  dump_model_state.py  iceshelf_class.py  initial_conditions.py  loop_over_grid.py  model_output.py  timestep.py  utils.py
monarchs/met_data/: import_AWS.py  import_test_ERA5.py  metdata_class.py
monarchs/physics/: firn_functions.py  heateqn.py  lake_functions.py  lateral_functions.py  lid_functions.py  percolation_functions.py  snow_accumulation.py  solver.py  surface_fluxes.py
scripts/: concatenate_netcdf.py  debug_lateral_flow.py  debug_model_state.py  extract_column_1d.py  flow_plot.py  get_singularity_container.sh  plot_case_densities.py  plot_gif.py  plot_output.py  plot_output_map.py  quicklook.py  rewrite_monarchs.py  slurm_run_template.sh
src/: model_setup_template.py  run_MONARCHS.py
src/monarchs/: run_MONARCHS.py  run_monarchs.py
tests/: README.md
tests/numba/: create_test_IceShelf.py  create_test_MetData.py  model_test_setup_numba.py  test_compilation.py  test_solver.py
tests/parallel/: model_test_setup_parallel.py
tests/serial/: create_test_IceShelf.py  create_test_MetData.py  iceshelf_testclass.py  model_test_setup_serial.py  test_catchment_outflow.py  test_firn_column.py  test_heateqn.py  test_ice_lens_lateral_water.py  test_lakes.py  test_lid.py
tests/unit_tests/: heateqn_harness.py  hybrid_solver.py  setup_test_cell.py  test_lake_combine_firn.py  test_lake_development.py  test_percolation.py  test_regridding.py  test_surface_fluxes.py  test_turbulent_mixing.py
validation/: Dirscherl_lakes.py  LC08_L1GT_213111_20140129_20170426_01_T2_MTL.txt  Moussavi_lakes.py  ReadIn_Moussavi.ipynb  Read_in_Output.py  lake_depth_moussavi.npy  lake_depth_moussavi_subset.npy  monarchs_and_moussavi_plot.py  x_moussavi_pooled.npy  x_moussavi_pooled_subset.npy  y_moussavi_pooled.npy  y_moussavi_pooled_subset.npy
(+1672 files in other folders)
