[project]
name = 'monarchs-ice'
version = '1.0.3'
description = 'A numerical model of ice shelf development'
requires-python = ">3.8"
authors = [
    {name = "Jon Elsey", email = "j.d.elsey@leeds.ac.uk"},
    {name = "Sammie Buzzard", email = 'sammie.buzzard@northumbria.ac.uk'}
]
readme = "README.md"
license = "GPL-3.0-or-later"
dependencies = [
    'numpy >= 1.26.3, < 2.0',
    'Numba >= 0.59',
    'scipy >= 1.12.0',
    'h5py',
    'netCDF4',
    'cartopy',
    'matplotlib',
    'Pillow >= 12.1.1',
    'imagecodecs',
    'pathos',
    'rioxarray',
    'rasterio',
    'pyproj',
    'dask',
]

classifiers = [
    "License: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",

]

[project.optional-dependencies]

numba = [
    'NumbaMinpack',
]

[dependency-groups]

dev = [
    'pytest',
    'pytest-cov',
    'ruff',
    'mypy',
    'pre-commit',
    'tox'
    ]

docs = [
    'sphinx',
    'sphinx-rtd-theme',
    'myst-parser',
    'sphinx-autoapi'
    ]

[project.scripts]
monarchs = 'monarchs.run_monarchs:run_from_cli'

[project.urls]
Repository = "https://github.com/monarchs-ice/monarchs"
Issues = "https://github.com/monarchs-ice/monarchs/issues"
Documentation = "https://monarchs-ice.github.io/monarchs/"
Homepage = "https://monarchs-ice.github.io/monarchs/"

[build-system]
build-backend = 'hatchling.build'
requires = ['hatchling']

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/monarchs"]

# pytest only reads [tool.pytest.ini_options] from pyproject.toml -
# a bare [tool.pytest] table is silently ignored.
[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.tox]
requires = ["tox>=4.15.0"]
env_list = ["3.9", "3.10", "3.11", "3.12", "3.13"]

[tool.tox.env_run_base]
extras = ["dev"]
commands = [
    ["ruff", "format", "--check"],
    ["ruff", "check"],
    ["pytest"]
]

[tool.ruff]

[tool.mypy]