[project]
name = 'monarchs-ice'
# version is derived from the latest git tag (vX.Y.Z) via hatch-vcs -
# create a GitHub release/tag to set it; do not hardcode it here
dynamic = ['version']
description = 'A numerical model of ice shelf development'
requires-python = ">=3.10"
authors = [
    {name = "Jon Elsey", email = "j.d.elsey@leeds.ac.uk"},
    {name = "Sammie Buzzard", email = 'sammie.buzzard@northumbria.ac.uk'}
]
readme = "README.md"
license = "GPL-3.0-or-later"
dependencies = [
    'numpy >= 1.26.3, < 2.0',
    'Numba >= 0.59',
    'scipy >= 1.12.0',
    'h5py',
    'netCDF4',
    'cartopy',
    'matplotlib',
    'Pillow >= 12.1.1',
    'imagecodecs',
    'pathos',
    'rioxarray',
    'rasterio',
    'pyproj',
    'dask',
]

classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",

]

[project.optional-dependencies]

numba = [
    'NumbaMinpack',
]

[dependency-groups]

dev = [
    'pytest',
    'pytest-cov',
    'ruff',
    'pre-commit',
    'tox'
    ]

docs = [
    'sphinx',
    'sphinx-rtd-theme',
    'myst-parser',
    'sphinx-autoapi'
    ]

[project.scripts]
monarchs = 'monarchs.run_monarchs:run_from_cli'

[project.urls]
Repository = "https://github.com/monarchs-ice/monarchs"
Issues = "https://github.com/monarchs-ice/monarchs/issues"
Documentation = "https://monarchs-ice.github.io/monarchs/"
Homepage = "https://monarchs-ice.github.io/monarchs/"

[build-system]
build-backend = 'hatchling.build'
requires = ['hatchling', 'hatch-vcs']

[tool.hatch.version]
source = 'vcs'

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/monarchs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
minversion = "7"
addopts = ["-ra", "--strict-config", "--strict-markers"]
xfail_strict = true
log_cli_level = "INFO"
filterwarnings = ["error"]

[tool.ruff]
target-version = "py310"

# Deferred to a dedicated lint-sweep branch - enabling these flags ~85 findings
# (isort reorders ~50 files) that should land as their own reviewable change:
# [tool.ruff.lint]
# extend-select = ["B", "UP", "I"]  # bugbear, pyupgrade, isort
# see https://docs.astral.sh/ruff/rules/

[tool.tox]
requires = ["tox>=4.15.0"]
env_list = ["3.10", "3.11", "3.12", "3.13"]

[tool.tox.env_run_base]
extras = ["dev"]
commands = [
    ["ruff", "format", "--check"],
    ["ruff", "check"],
    ["pytest"]
]