[project]
name = 'monarchs-ice'
# version is derived from the latest git tag (vX.Y.Z) via hatch-vcs -
# create a GitHub release/tag to set it; do not hardcode it here
dynamic = ['version']
description = 'A numerical model of ice shelf development'
requires-python = ">=3.10"
authors = [
    {name = "Jon Elsey", email = "j.d.elsey@leeds.ac.uk"},
    {name = "Sammie Buzzard", email = 'sammie.buzzard@northumbria.ac.uk'}
]
readme = "README.md"
license = "GPL-3.0-or-later"
dependencies = [
    'numpy >= 1.26.3, < 2.0',
    'Numba >= 0.59',
    'scipy >= 1.12.0',
    'h5py',
    'netCDF4',
    'cartopy',
    'matplotlib',
    'Pillow >= 12.1.1',
    'imagecodecs',
    'pathos',
    'rioxarray',
    'rasterio',
    'pyproj',
    'dask',
]

classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",

]

[dependency-groups]

dev = [
    'pytest',
    'pytest-cov',
    'ruff',
    'pre-commit',
    'tox'
    ]

docs = [
    'sphinx',
    'sphinx-rtd-theme',
    'myst-parser',
    'sphinx-autoapi'
    ]

[project.scripts]
monarchs = 'monarchs.run_monarchs:run_from_cli'

[project.urls]
Repository = "https://github.com/monarchs-ice/monarchs"
Issues = "https://github.com/monarchs-ice/monarchs/issues"
Documentation = "https://monarchs-ice.github.io/monarchs/"
Homepage = "https://monarchs-ice.github.io/monarchs/"

[build-system]
build-backend = 'hatchling.build'
requires = ['hatchling', 'hatch-vcs']

[tool.hatch.version]
source = 'vcs'

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/monarchs"]
# ship the bundled datasets (ERA5 example + 1-D test checkpoints/met) even
# though *.nc is git-ignored globally
artifacts = [
    "src/monarchs/data/met_data/*.nc",
    "src/monarchs/data/checkpoints/*.nc",
    "src/monarchs/data/met_data/*.npy",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
minversion = "7"
addopts = ["-ra", "--strict-config", "--strict-markers"]
xfail_strict = true
log_cli_level = "INFO"
filterwarnings = [
    "error",
    # netCDF is compiled against a different version
    # of numpy than the model uses, which causes a warning to
    # be raised since there is a header being expanded, we
    # can safely ignore as the version we use is newer
    "ignore:numpy.ndarray size changed:RuntimeWarning",
]

[tool.ruff]
target-version = "py310"

# deferred for a future branch - lots of changes and work to make this pass
# [tool.ruff.lint]
# extend-select = ["B", "UP", "I"]  # bugbear, pyupgrade, isort
# see https://docs.astral.sh/ruff/rules/

[tool.tox]
requires = ["tox>=4.15.0"]
env_list = ["3.10", "3.11", "3.12", "3.13"]

[tool.tox.env_run_base]
extras = ["dev"]
commands = [
    ["ruff", "format", "--check"],
    ["ruff", "check"],
    ["pytest"]
]